--- a/res/layout/superuser_app_layout.xml
+++ b/res/layout/superuser_app_layout.xml
@@ -18,7 +18,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/developer_warning"
-        android:textColor="@android:color/holo_red_dark"
+        android:textColor="@color/developer_warning"
         android:visibility="gone" />
 
 </merge>
