--- a/res/layout/drawer_header_item.xml
+++ b/res/layout/drawer_header_item.xml
@@ -20,7 +20,7 @@
  xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#FF303030">
+    android:background="@color/drawer_header_color">
 
     <TextView
         android:id="@+id/item_title"
@@ -29,7 +29,7 @@
         android:layout_width="0dp"
         android:layout_weight="1"
         android:gravity="center_vertical"
-        android:textColor="#FFF"/>
+        android:textColor="@color/drawer_title_text_color"/>
 
     <ImageView
         android:id="@+id/item_icon"
