--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -17,11 +17,32 @@
  -->
 
 <resources>
-    <color name="evtoolbox_primary">@*android:color/material_blue_grey_900</color>
-    <color name="evtoolbox_primary_dark">@*android:color/material_blue_grey_950</color>
-    <color name="evtoolbox_accent">@*android:color/material_deep_teal_500</color>
-    <color name="evtoolbox_drawer_light">@*android:color/white</color>
 
-    <color name="evtoolbox_text_primary">@*android:color/white</color>
-    <color name="evtoolbox_text_secondary">@*android:color/black</color>
+    <!-- Main colors -->
+    <color name="themePrimary">@*android:color/material_blue_grey_900</color>
+    <color name="themePrimaryDark">@*android:color/material_blue_grey_950</color>
+    <color name="themeAccent">@*android:color/material_deep_teal_500</color>
+    <color name="textColorPrimary">@android:color/white</color>
+    <color name="textColor">@android:color/black</color>
+
+    <!-- Pager -->
+    <color name="pager_title_background">@*android:color/material_blue_grey_900</color>
+    <color name="pager_title_text_color">@android:color/white</color>
+
+    <!-- Drawer -->
+    <color name="drawer_background_color">@android:color/white</color>
+    <color name="drawer_divider_color">@android:color/transparent</color>
+    <color name="drawer_header_color">@android:color/white</color>
+    <color name="drawer_title_text_color">@android:color/white</color>
+    <color name="drawer_nav_text_color">@android:color/black</color>
+
+    <!-- Bottom bar -->
+    <color name="bottom_action_bar_color">@*android:color/material_deep_teal_500</color>
+    <color name="bottom_action_bar_text_color">@android:color/white</color>
+
+    <!-- Superuser -->
+    <color name="superuser_slider_fade">#00000000</color>
+    <color name="superuser_pin">@android:color/holo_blue_dark</color>
+    <color name="developer_warning">@android:color/holo_red_dark</color>
+
 </resources>
