Toolbox: update layout
 - New navigation drawer
 - Moved BugReport to utils
 - Moved Superuser to utils
 - Added a ToolboxSettings preference fragment
 - Add color variables from for legacy theme support

Change-Id: I42f6edda44c117e12cd496b4f2826c2a7b5b9c25

--- a/res/layout-land/superuser_pin_preference.xml
+++ b/res/layout-land/superuser_pin_preference.xml
@@ -103,8 +103,7 @@
                     <ImageButton
                         android:id="@+id/pd"
                         style="@style/PinButton"
-                        android:scaleType="fitCenter"
-                        android:src="@drawable/ic_delete" />
+                        android:src="@drawable/ic_backspace" />
 
                 </LinearLayout>
 
