--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.EVToolbox" parent="android:Theme.Material.Light.DarkActionBar">
-        <item name="android:colorPrimary">@color/themePrimary</item>
-        <item name="android:colorPrimaryDark">@color/themePrimaryDark</item>
-        <item name="android:colorAccent">@color/themeAccent</item>
-        <item name="android:textColorPrimary">@color/textColorPrimary</item>
-        <item name="android:textColor">@color/textColor</item>
+    <style name="Theme.EVToolbox" parent="Theme.AppCompat.Light.DarkActionBar" >
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="colorPrimary">@color/themePrimary</item>
+        <item name="colorPrimaryDark">@color/themePrimaryDark</item>
+        <item name="colorAccent">@color/themeAccent</item>
+        <item name="android:listDivider">@android:color/transparent</item>
     </style>
+
+    <style name="ThemeOverlay.EVToolbox.ActionBar" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="ThemeOverlay.EVToolbox" parent="ThemeOverlay.AppCompat.Light" />
 
     <style name="PinButton">
         <item name="android:layout_width">0dp</item>
