--- a/res/layout/superuser_pin.xml
+++ b/res/layout/superuser_pin.xml
@@ -108,8 +108,7 @@
                     <ImageButton
                         android:id="@+id/pd"
                         style="@style/PinButton"
-                        android:scaleType="fitCenter"
-                        android:src="@drawable/ic_delete" />
+                        android:src="@drawable/ic_backspace" />
 
                 </LinearLayout>
 
