--- a/res/layout/toolbox.xml
+++ b/res/layout/toolbox.xml
@@ -15,24 +15,46 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  -->
+
 <android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
 
-    <FrameLayout
-        android:id="@+id/container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    <ListView android:id="@+id/left_drawer"
-        android:layout_width="240dp"
+        <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:minHeight="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"
+                app:theme="@style/ThemeOverlay.EVToolbox.ActionBar"
+                app:popupTheme="@style/ThemeOverlay.EVToolbox" />
+
+            <FrameLayout
+                    android:id="@+id/container"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+    </LinearLayout>
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:choiceMode="singleChoice"
-        android:divider="@color/drawer_divider_color"
-        android:dividerHeight="0dp"
-        android:background="@color/drawer_background_color" />
+        android:fitsSystemWindows="true"
+        android:background="@color/navigation_drawer_background"
+        app:headerLayout="@layout/drawer_header"
+        app:menu="@menu/toolbox_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
