--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -18,30 +18,34 @@
 
 <resources>
 
-    <!-- Main colors -->
-    <color name="themePrimary">@*android:color/material_blue_grey_900</color>
-    <color name="themePrimaryDark">@*android:color/material_blue_grey_950</color>
-    <color name="themeAccent">@*android:color/material_deep_teal_500</color>
-    <color name="textColorPrimary">@android:color/white</color>
-    <color name="textColor">@android:color/black</color>
+    <!-- DEPRECIATED: Legacy theme variables colors -->
+    <color name="evtoolbox_primary">#cf3d35</color>
+    <color name="evtoolbox_primary_dark">#9b2e28</color>
+    <color name="evtoolbox_accent">#32a929</color>
+    <color name="evtoolbox_text_primary">@*android:color/white</color>
+    <color name="evtoolbox_text_secondary">@*android:color/black</color>
+    <color name="evtoolbox_drawer_light">@*android:color/white</color>
+
+    <!-- New theme default variables -->
+    <color name="themePrimary">@color/evtoolbox_primary</color>
+    <color name="themePrimaryDark">@color/evtoolbox_primary_dark</color>
+    <color name="themeAccent">@color/evtoolbox_accent</color>
+    <color name="themeTextPrimary">@color/evtoolbox_text_primary</color>
+    <color name="themeText">@color/evtoolbox_text_secondary</color>
 
     <!-- Pager -->
-    <color name="pager_title_background">@*android:color/material_blue_grey_900</color>
-    <color name="pager_title_text_color">@android:color/white</color>
-
-    <!-- Drawer -->
-    <color name="drawer_background_color">@android:color/white</color>
-    <color name="drawer_divider_color">@android:color/transparent</color>
-    <color name="drawer_header_color">@android:color/white</color>
-    <color name="drawer_title_text_color">@android:color/white</color>
-    <color name="drawer_nav_text_color">@android:color/black</color>
+    <color name="pager_title_background">@color/themePrimary</color>
+    <color name="pager_title_text_color">@color/themeTextPrimary</color>
 
     <!-- Bottom bar -->
-    <color name="bottom_action_bar_color">@*android:color/material_deep_teal_500</color>
-    <color name="bottom_action_bar_text_color">@android:color/white</color>
+    <color name="bottom_action_bar_color">@color/themeAccent</color>
+    <color name="bottom_action_bar_text_color">@color/themeTextPrimary</color>
+
+    <!-- Navigation drawer -->
+    <color name="navigation_drawer_background">@color/evtoolbox_drawer_light</color>
 
     <!-- Superuser -->
-    <color name="superuser_slider_fade">#00000000</color>
+    <color name="superuser_slider_fade">@*android:color/black</color>
     <color name="superuser_pin">@android:color/holo_blue_dark</color>
     <color name="developer_warning">@android:color/holo_red_dark</color>
 
