--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -64,9 +64,11 @@
         <item>com.android.launcher3:#Intent;action=android.intent.action.MAIN;category=android.intent.category.HOME;end</item>
         <item>com.android.camera2:#Intent;action=android.media.action.IMAGE_CAPTURE;end</item>
         <item>com.android.mms</item>
+        <item>com.android.messaging</item>
         <item>com.android.inputmethod.latin</item>
         <item>com.android.music</item>
         <item>com.android.browser</item>
+        <item>org.chromium.chrome</item>
         <item>com.android.calendar</item>
         <item>com.android.email</item>
         <item>com.android.deskclock</item>
