--- a/res/xml/statusbar_general.xml
+++ b/res/xml/statusbar_general.xml
@@ -46,4 +46,11 @@
                 android:title="@string/pref_statusbar_quick_pulldown_title"
                 android:summary="@string/pref_statusbar_quick_pulldown_summary">
         </SwitchPreference>
+
+        <SwitchPreference
+                android:key="pref_statusbar_custom_header"
+                android:title="@string/pref_statusbar_custom_header_title"
+                android:summary="@string/pref_statusbar_custom_header_summary"
+                android:defaultValue="false">
+        </SwitchPreference>
 </PreferenceScreen>
