[SQUASH]toolbox: Add lights settings
cmparts: Add lights settings
cmparts: Move strings from CMSDK
ApplicationLightPreference: fix saving
CMParts: Notification light: Fix for app customization
cmparts: Implement SummaryProvider for a few components
cmparts: Cleanup on aisle 9
cmparts: Refactor for RemotePreference and SettingsHelper
cmparts: Remove noop fields when LED can't pulse
CMParts: Hide Reset action if Battery LED is not multicolor
CMParts: Use NotificationManager to figure out LED capabilities
NotificationLightSettings: removed unused code
cosmetic fix: s/drawwable/drawable/g
CMParts: Clean out imports
LineageParts: rebrand step 1: update paths
Multiple LEDs [1/2]: Remove feature support
LineageParts LightSettingsDialog: Use an mContext member variable
LineageParts: migrate to lineage-sdk LightsCapabilities
LineageParts: Add notification brightness dialog
LineageParts: Add reset button to ApplicationLightPreference
LineageParts: Rename NotificationBrightnessDialog.java to BrightnessPreference.java
LineageParts Lights: Add battery and notification DnD brightness controls
LineageParts: Fix berry style issues
Parts: Fix notification light app hint
LineageParts: Fix loading default colors for non-RGB lights
LineageParts: Fix removing LED brightness settings
LineageParts: Allow adjusting brightness of non-RGB LEDs
LineageParts: Use the battery HAL lights brightness capability
LineageParts: Allow brightness control for segmented LEDs
LightSettingsDialog: remove unused OnColorChangedListener
LightSettingsDialog: create and use notification channel
LightSettingsDialog: add bundle extras for preview color and duration
LineageParts: Migrate to androidx

Change-Id: Ic67f65cf2366b32c94bc79cd13492bda159b691f

--- a/res/xml/parts_catalog.xml
+++ b/res/xml/parts_catalog.xml
@@ -79,4 +79,14 @@
           android:fragment="com.evervolv.toolbox.applications.ExpandedDesktopSettings"
           evervolv:xmlRes="@xml/expanded_desktop_prefs" />
 
+    <part android:key="battery_lights"
+          android:title="@string/battery_light_title"
+          android:fragment="com.evervolv.toolbox.notificationlight.BatteryLightSettings"
+          evervolv:xmlRes="@xml/battery_light_settings" />
+
+    <part android:key="notification_lights"
+          android:title="@string/notification_light_title"
+          android:fragment="com.evervolv.toolbox.notificationlight.NotificationLightSettings"
+          evervolv:xmlRes="@xml/notification_light_settings" />
+
 </parts-catalog>
