cmparts: Add LiveDisplay settings
 * Welcome to CMParts, have a nice day!

Change-Id: Ie89830c6315ed583942cb62c3d03e9f3137bf168

cmparts: livedisplay: Fix missing color profile strings

We were looking for the strings in the wrong package.

Change-Id: I2baee331b3f2a5d645f734602433348c9cd84ae3

cmparts: Make CMParts searchable

 * Implement a SearchIndexablesProvider to allow the Settings app
   to crawl our resources.
 * Add all missing metadata where necessary so resources can be
   indexed.

Change-Id: Ic8f304a7995b269f476eda6306d11b366621f4b0

cmparts: Search improvements

 * Add proper support for raw data
 * Make the contributors easter egg more eggy
 * Supply all the relevant columns for raw data correctly so items
   are not duplicated

Change-Id: I9058f2ab010d03cdae38fb20c3592b43077f8ceb

cmparts: Cleanup on aisle 9

 * Stop dumping shit into the top level of the package and relocate it
   to the widgets directory
 * Removed a few unused things

Change-Id: I19f2a2fadfd38dcc24a4de2de988f11056124cbb

cmparts: Replace remaining observers with Observatory

Change-Id: I6f537b3b3820dac719b0a63fd1bbe319b7565cd5

CMParts: Move resource utility methods into a util class

Other settings can also make use of these methods.

Change-Id: Iab31a8a43b62c7700b499537ccb854f9a5768608

CMParts: Add reading mode strings

Change-Id: I9942ecc0545d7a07883f65e6b6066fd0128b4a87

CMParts: strings: Fix indentation

Change-Id: I4e5273de50fac004022bd1d7f275c73cf6fbe737

CMParts: Add strings for sRGB

Change-Id: I6cf99f9ce81f5d8cc9c67e507138a21018b5bbd9

CMParts: Add strings for DCI-P3 color profile

Change-Id: Ieb6811c74297968eb38991e56768f6994a8796ea

LineageParts: Migrate to androidx

* Migrate from support library to androidx

* Various improvements and cleanup by @bgcngm

Change-Id: Ic2596fd93abf8570fb4ce2239e99d3d862cf47b7

--- a/res/xml/parts_catalog.xml
+++ b/res/xml/parts_catalog.xml
@@ -78,4 +78,9 @@
           android:fragment="com.evervolv.toolbox.notificationlight.NotificationLightSettings"
           evervolv:xmlRes="@xml/notification_light_settings" />
 
+    <part android:key="livedisplay"
+          android:title="@*evervolv.platform:string/live_display_title"
+          android:fragment="com.evervolv.toolbox.livedisplay.LiveDisplay"
+          evervolv:xmlRes="@xml/livedisplay" />
+
 </parts-catalog>
