EVToolbox: add status bar settings
Change-Id: I6efc1eaa44b08f0eab53d919b815b2b1cc4f836b

--- a/res/xml/parts_catalog.xml
+++ b/res/xml/parts_catalog.xml
@@ -56,4 +56,9 @@
           android:fragment="com.evervolv.toolbox.style.StylePreferences"
           evervolv:xmlRes="@xml/style_preferences" />
 
+    <part android:key="status_bar_settings"
+          android:title="@string/status_bar_title"
+          android:fragment="com.evervolv.toolbox.statusbar.StatusBarSettings"
+          evervolv:xmlRes="@xml/status_bar_settings" />
+
 </parts-catalog>
