--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -155,4 +155,19 @@
         <item>2</item>
     </string-array>
 
+    <!-- Battery meter style -->
+    <string-array name="status_bar_battery_style_entries" translatable="false">
+        <item>@string/status_bar_battery_style_icon_portrait</item>
+        <item>@string/status_bar_battery_style_circle</item>
+        <item>@string/status_bar_battery_style_text</item>
+        <item>@string/status_bar_battery_style_hidden</item>
+    </string-array>
+
+    <string-array name="status_bar_battery_style_values" translatable="false">
+        <item>0</item>
+        <item>2</item>
+        <item>5</item>
+        <item>4</item>
+    </string-array>
+
 </resources>
