--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -22,4 +22,11 @@
         <attr name="defaultColorValue" format="integer" />
     </declare-styleable>
 
+    <declare-styleable name="SelfRemovingPreference">
+        <attr name="requiresPackage" format="string" />
+        <attr name="requiresFeature" format="string" />
+        <attr name="requiresConfig" format="string" />
+        <attr name="requiresProperty" format="string" />
+    </declare-styleable>
+
 </resources>
