--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -33,4 +33,11 @@
         <attr name="minSummaryLines" format="integer" />
     </declare-styleable>
 
+    <!-- Base attributes available to CustomSeekBarPreference. -->
+    <declare-styleable name="CustomSeekBarPreference">
+        <attr name="interval" format="integer" />
+        <attr name="min" format="integer" />
+        <attr name="max" format="integer" />
+        <attr name="units" format="string|reference" />
+    </declare-styleable>
 </resources>
