Toolbox: adjust superuser
 This change moves from a switch preference
 to a listpreference. Giving further control over
 what has superuser access. Original idea from CM,
 adapted for ev toolbox. Default action, disabled.
 https://github.com/CyanogenMod/android_packages_apps_Settings/commit/9c512949b5cf487703a75abc7a56d0d98df59e32

Change-Id: I50034ec672bdedea0c981e30d618dbce3b9fd99c

--- a/res/xml/superuser.xml
+++ b/res/xml/superuser.xml
@@ -18,11 +18,12 @@
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-        <SwitchPreference
-                android:key="pref_superuser_superuser_access"
-                android:title="@string/pref_superuser_superuser_access_title"
-                android:summaryOn="@string/pref_superuser_superuser_access_summary_on"
-                android:summaryOff="@string/pref_superuser_superuser_access_summary_off" />
+        <ListPreference
+            android:key="pref_superuser_access"
+            android:title="@string/pref_superuser_access_title"
+            android:entries="@array/pref_superuser_access_entries"
+            android:entryValues="@array/pref_superuser_access_entryvalues">
+        </ListPreference>
 
         <SwitchPreference
                 android:key="pref_superuser_logging"
