--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -181,4 +181,18 @@
         <item>60</item>
     </string-array>
 
+    <string-array name="pref_superuser_access_entries" translatable="false">
+        <item>@string/pref_superuser_access_disabled</item>
+        <item>@string/pref_superuser_access_apps_only</item>
+        <item>@string/pref_superuser_access_adb_only</item>
+        <item>@string/pref_superuser_access_apps_adb</item>
+    </string-array>
+
+    <string-array name="pref_superuser_access_entryvalues" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+
 </resources>
