--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -27,6 +27,7 @@
         <attr name="requiresFeature" format="string" />
         <attr name="requiresConfig" format="string" />
         <attr name="requiresProperty" format="string" />
+        <attr name="requiresOwner" format="boolean" />
     </declare-styleable>
 
 </resources>
