Toolbox: Add display rotation settings
  * Original work by:
    - Robert Burns
    - Martin Brabham
    - David Van Tonder
    - Michael Bestas
    - Adnan Begovic

Change-Id: If1b4a45fb41b94136209acb47a5549a1b0c25143

--- a/res/xml/parts_catalog.xml
+++ b/res/xml/parts_catalog.xml
@@ -45,4 +45,9 @@
           android:fragment="com.evervolv.toolbox.applications.LongScreenSettings"
           evervolv:xmlRes="@xml/long_screen_prefs" />
 
+    <part android:key="rotation"
+          android:title="@string/display_rotation_title"
+          android:fragment="com.evervolv.toolbox.display.RotationSettings"
+          evervolv:xmlRes="@xml/display_rotation" />
+
 </parts-catalog>
