--- a/res/xml/statusbar_general.xml
+++ b/res/xml/statusbar_general.xml
@@ -17,17 +17,19 @@
  -->
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-        <ListPreference
-                android:key="pref_statusbar_clock_am_pm_style"
-                android:title="@string/pref_statusbar_clock_am_pm_style_title"
-                android:summary="@string/pref_statusbar_clock_am_pm_style_summary"
-                android:dialogTitle="@string/pref_statusbar_clock_am_pm_style_title"
-                android:entries="@array/statusbar_clock_am_pm_style_entries"
-                android:entryValues="@array/statusbar_clock_am_pm_style_entryvalues" />
+
+        <ListPreference android:key="pref_statusbar_clock_am_pm_style"
+            android:title="@string/pref_statusbar_clock_am_pm_style_title"
+            android:summary="@string/pref_statusbar_clock_am_pm_style_summary"
+            android:dialogTitle="@string/pref_statusbar_clock_am_pm_style_title"
+            android:entries="@array/statusbar_clock_am_pm_style_entries"
+            android:entryValues="@array/statusbar_clock_am_pm_style_entryvalues">
+        </ListPreference>
 
         <SwitchPreference
-                android:key="pref_statusbar_quick_pulldown"
-                android:title="@string/pref_statusbar_quick_pulldown_title"
-                android:summary="@string/pref_statusbar_quick_pulldown_summary">
+            android:key="pref_statusbar_quick_pulldown"
+            android:title="@string/pref_statusbar_quick_pulldown_title"
+            android:summary="@string/pref_statusbar_quick_pulldown_summary">
         </SwitchPreference>
+
 </PreferenceScreen>
