--- a/res/xml/system_network.xml
+++ b/res/xml/system_network.xml
@@ -18,20 +18,22 @@
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <com.evervolv.toolbox.custom.HostnamePreference
-        android:key="pref_system_hostname"
-        android:title="@string/pref_system_hostname_title"
-        android:dialogTitle="@string/pref_system_hostname_title"
-        android:positiveButtonText="@string/apply"
-        android:negativeButtonText="@string/cancel"
-        android:selectAllOnFocus="true"
-        android:imeOptions="actionDone"
-        android:inputType="textNoSuggestions"
-        android:persistent="false" />
+        <com.evervolv.toolbox.custom.HostnamePreference
+            android:key="pref_system_hostname"
+            android:title="@string/pref_system_hostname_title"
+            android:dialogTitle="@string/pref_system_hostname_title"
+            android:positiveButtonText="@string/apply"
+            android:negativeButtonText="@string/cancel"
+            android:selectAllOnFocus="true"
+            android:imeOptions="actionDone"
+            android:inputType="textNoSuggestions"
+            android:persistent="false">
+        </com.evervolv.toolbox.custom.HostnamePreference>
 
-    <SwitchPreference
-        android:key="pref_system_sshd"
-        android:title="@string/pref_system_sshd_title"
-        android:summary="@string/pref_system_sshd_summary" />
+        <SwitchPreference
+            android:key="pref_system_sshd"
+            android:title="@string/pref_system_sshd_title"
+            android:summary="@string/pref_system_sshd_summary">
+        </SwitchPreference>
 
 </PreferenceScreen>
