Toolbox: update performance profile settings
Add the perf profiles and battery saver mode.

Based on the original work by the following people:
 - Steve Kondik
 - Khalid Zubair
 - Danesh Mondegarian

Based on the work in the following Settings commits:
f73dfe3308a245bde42cd8ec1a330f6e021e1a3f
8bc96242ae39bc3ff8dd98e208c242fda3c625ea
bfefa433030c98a449b74e1538e4a9af04d6d76a
e1a196a2afcc534db42492b0133f3c36a7c26de5

Change-Id: I24542ae38daec48f099bab7c51271c638047ed32

--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -35,4 +35,9 @@
     <color name="navigation_drawer_background">@*android:color/white</color>
     <color name="navigation_drawer_icon_color">@color/themeAccent</color>
 
+    <!-- Performance profiles -->
+    <color name="perf_hot">#ffd10015</color>
+    <color name="perf_default">#ff692d55</color>
+    <color name="perf_cold">#ff005994</color>
+
 </resources>
