--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -21,4 +21,7 @@
 
     <color name="switch_bar_background">#ff80868B</color>
 
+    <color name="perf_hot">#ffd10015</color>
+    <color name="perf_cold">#ff005994</color>
+
 </resources>
