--- a/res/xml/statusbar_general.xml
+++ b/res/xml/statusbar_general.xml
@@ -18,6 +18,29 @@
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
+        <ListPreference android:key="pref_statusbar_batt_style"
+            android:title="@string/pref_statusbar_batt_style_title"
+            android:summary="@string/pref_statusbar_batt_style_summary"
+            android:dialogTitle="@string/pref_statusbar_batt_style_title"
+            android:entries="@array/statusbar_batt_style_entries"
+            android:entryValues="@array/statusbar_batt_style_entryvalues" >
+        </ListPreference>
+
+        <ListPreference android:key="pref_statusbar_batt_percent_style"
+            android:title="@string/pref_statusbar_batt_percent_title"
+            android:summary="@string/pref_statusbar_batt_percent_summary"
+            android:dialogTitle="@string/pref_statusbar_batt_percent_title"
+            android:entries="@array/statusbar_batt_percent_entries"
+            android:entryValues="@array/statusbar_batt_percent_entryvalues" >
+        </ListPreference>
+
+        <net.margaritov.preference.colorpicker.ColorPickerPreference
+            android:key="pref_status_bar_charge_color"
+            android:title="@string/pref_status_bar_charge_color_title"
+            android:persistent="false"
+            android:defaultValue="0xffffff" >
+        </net.margaritov.preference.colorpicker.ColorPickerPreference>
+
         <ListPreference android:key="pref_statusbar_clock_am_pm_style"
             android:title="@string/pref_statusbar_clock_am_pm_style_title"
             android:summary="@string/pref_statusbar_clock_am_pm_style_summary"
