--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -113,6 +113,18 @@
         <item>2</item>
     </string-array>
 
+    <string-array name="pref_status_bar_battery_text_symbol_entries" translatable="false">
+        <item>@string/pref_status_bar_battery_text_symbol_default</item>
+        <item>@string/pref_status_bar_battery_text_symbol_flash</item>
+        <item>@string/pref_status_bar_battery_text_symbol_tilde</item>
+    </string-array>
+
+    <string-array name="pref_status_bar_battery_text_symbol_entryvalues" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
     <string-array name="statusbar_clock_am_pm_style_entries" translatable="false">
         <item>@string/pref_statusbar_clock_am_pm_style_normal</item>
         <item>@string/pref_statusbar_clock_am_pm_style_small</item>
