--- a/res/xml/interface_general.xml
+++ b/res/xml/interface_general.xml
@@ -54,8 +54,8 @@
             android:summary="@string/pref_lockscreen_music_controls_volbtn_summary">
         </SwitchPreference>
 
-        <com.evervolv.toolbox.custom.NumberPickerPreference android:key="pref_interface_density_picker"
+        <com.evervolv.toolbox.preference.NumberPickerPreference android:key="pref_interface_density_picker"
             android:title="@string/pref_interface_density_picker_title">
-        </com.evervolv.toolbox.custom.NumberPickerPreference>
+        </com.evervolv.toolbox.preference.NumberPickerPreference>
 
 </PreferenceScreen>
