Toolbox: add a hardware category
 move button related code out of interface and into hardware
 remove old density picker

Change-Id: I56f09464f323a688a74773d31f4f4a0517e3195f

--- a/res/menu/toolbox_drawer.xml
+++ b/res/menu/toolbox_drawer.xml
@@ -29,6 +29,9 @@
                 <item android:id="@+id/nav_system"
                       android:icon="@drawable/ic_menu_system"
                       android:title="@string/tab_title_system" />
+                <item android:id="@+id/nav_hardware"
+                      android:icon="@drawable/ic_menu_hardware"
+                      android:title="@string/tab_title_hardware" />
                 <item android:id="@+id/nav_performance"
                       android:icon="@drawable/ic_menu_performance"
                       android:title="@string/tab_title_performance" />
