Toolbox: move quick settings options to its own fragment
Change-Id: Id9d4035a8db13a6d603c2afec965a90e270f8fc4

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -30,6 +30,7 @@
 
     <string-array name="statusbar_nav" translatable="false">
         <item>@string/general_title</item>
+        <item>@string/statusbar_qs_title</item>
     </string-array>
 
     <string-array name="interface_nav" translatable="false">
